crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_union_sugar_nested.stderr
error: node_pattern!: pattern parse error: `$` capture is not allowed inside `{}` / `!` / `` ` `` (the body has no definite-assignment path) (at 6..12)
 --> tests/ui/fail_node_pattern_capture_union_sugar_nested.rs:4:40
  |
4 | murphy_plugin_macros::node_pattern!(m, "${int $float}");
  |                                        ^^^^^^^^^^^^^^^
