crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_union_sugar_nested.rs
// node_pattern! must reject `${int $float}` — the sugar body of the second
// arm is itself a `$` capture, which would create a nested unwritten slot.

murphy_plugin_macros::node_pattern!(m, "${int $float}");

fn main() {}
